--- a/_posts/矩阵转置.md
+++ b/_posts/矩阵转置.md
@@ -3,9 +3,16 @@ title: 矩阵转置
 author: 高思强
 date: 2017-03-07 21:48:50
 comments: true
+tags:
+- [php]
+- [javascript]
+categories:
+- 算法
 ---
 
-#php矩阵转置
+# 矩阵转置
+
+## php矩阵转置
 
 ```php
 $a = [
@@ -26,7 +33,7 @@ for($i = 0,$c = count($a);$i<$c;$i++)
 }
 ```
 
-#javascript矩阵转置
+## javascript矩阵转置
 ```javascript
     //前提是对齐矩阵
     var a = [
@@ -63,4 +70,3 @@ for($i = 0,$c = count($a);$i<$c;$i++)
         document.write('</br>');
     }
 ```
->github.com/gaosiqiang
