update)修改‘从数学危机到图灵机’的内容修订

--- a/_posts/从数学危机到图灵机.md
+++ b/_posts/从数学危机到图灵机.md
@@ -4,9 +4,9 @@ author: 高思强
 date: 2021-10-12 01:42:56
 comments: true
 tags:
-- 数学
+- 数学,数学危机,图灵机
 categories:
-- CS
+- CS,数学
 ---
 
 # 从数学危机到图灵机
@@ -39,7 +39,7 @@ categories:
 数理逻辑学家们给出了一个研究思路：为计算建立一个数学模型，称之为计算模型。计算模型能够完成的任务就是可计算任务，也就是可计算问题。
 
 ## 图灵机：
-图灵发表了《论可计算数在判定问题中的应用》论文中，阐述了一种计算模型，这个模型可以作为判定问题是否可计算的数学模型，这个模型就是图灵机。图灵机是抽象逻辑层面上的计算模型。可以具体化网上有很多具体化的实物。
+图灵发表了[《论可计算数在判定问题中的应用》](https://www.cs.virginia.edu/~robins/Turing_Paper_1936.pdf)论文中，阐述了一种计算模型，这个模型可以作为判定问题是否可计算的数学模型，这个模型就是图灵机。图灵机是抽象逻辑层面上的计算模型。可以具体化网上有很多具体化的实物。
 
 ## 总结：
 数学的诞生开始还是属于哲学思想的延伸探索，当人类有了文明和生产力的发展那么数学就是唯一可以有效的计算和量化的思想工具。
@@ -47,3 +47,7 @@ categories:
 这种趋势必然导致数学会有自身的发展逻辑和趋势脉络，最终演化到当前（当前是指21世纪）经历了三大数学危机也是对数学学科这个大厦的完善。
 
 在数学在应用层面上作为计算的思想的应用，上面内容可知引出建立通用型数学计算模型也就是图灵机模型。
+
+## 参考
+- [数学危机](https://baike.baidu.com/item/%E6%95%B0%E5%AD%A6%E5%8D%B1%E6%9C%BA/1748494)
+- [数理逻辑术语：哥德尔不完全性定理](https://baike.baidu.com/item/%E5%93%A5%E5%BE%B7%E5%B0%94%E4%B8%8D%E5%AE%8C%E5%85%A8%E6%80%A7%E5%AE%9A%E7%90%86/4116640)，哥德尔不完备定理_一般指哥德尔不完全性定理
